fixed background image not working on safari iphone

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -108,7 +108,7 @@ input[type=submit] {
 
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)), url(img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)), url("img/hero.jpg");
     height: 100vh;
     background-size: cover;
     background-position: center;
